--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
-    <artifactId>CarService</artifactId>
+    <artifactId>CarServiceApp</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <build>
         <plugins>
@@ -19,6 +20,9 @@
             </plugin>
         </plugins>
     </build>
+    <modules>
+        <module>CarService</module>
+    </modules>
 
     <dependencies>
         <dependency>
