--- a/CarServiceWeb/src/main/resources/application.properties
+++ b/CarServiceWeb/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/carService?createDatabaseIfNotExist=true&serverTimezone=UTC&useLegacyDatetimeCode=false
+spring.datasource.username=user
+spring.datasource.password=root
 
+# W celu uruchomienia aplikacji w kontenerze dockerowym razem z bazą, za pomocą docker-compose, należy użyć poniższej konfiguracji:
+#spring.datasource.url=${SPRING_DATASOURCE_URL}
+#spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+#spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+
+spring.jpa.hibernate.ddl-auto=update
+
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
